--- a/partialViews/project-paint.html
+++ b/partialViews/project-paint.html
@@ -55,6 +55,22 @@
               </div>
             </div>
 
+            <!--Row2-->
+            <div class="row">
+              <div class="col-xs-12 mg-sm-top">
+                <h4>Technologies</h4>
+                <p class="indent text-justify">
+                  <br>
+                  ● JavaScript <br>
+                  ● jQuery <br>
+                  ● Bootstrap <br>
+                  ● p5.js <br>
+                  ● HTML <br>
+                  ● CSS
+                </p>
+              </div>
+            </div>
+
             <!--Row4-->
             <div class="row mg-sm-top">
               <div class="col-md-8 col-md-offset-2 col-xs-12 mg-sm-top regular">
