--- a/partialViews/project-vipTransport.html
+++ b/partialViews/project-vipTransport.html
@@ -56,9 +56,10 @@
                 <p class="indent text-justify">
                   The web application was developed using the XAMPP stack with addition to NoSQL mongoDB
                   for statistics and data analisys.
-                </p>
-                <p class="indent text-justify">
+                  <br>
+                  <br>
                   Technologies:
+                  <br>
                   <br>
                   ● Apache <br>
                   ● PHP <br>
@@ -82,12 +83,12 @@
                 <div class="gallery">
                   <div id="img1">
                     <a href="#" class="expand-image">
-                      <img id="test" class="image img-responsive image-modal" src="images/Viptransport-Gallery-1.jpg" alt="">
+                      <img id="test" class="image img-responsive image-modal" src="images/Viptransport-Gallery-2.jpg" alt="">
                     </a>
                   </div>
                   <div id="img2">
                     <a href="#" class="expand-image">
-                      <img class="image img-responsive" src="images/Viptransport-Gallery-2.jpg" alt="">
+                      <img class="image img-responsive" src="images/Viptransport-Gallery-1.jpg" alt="">
                     </a>
                   </div>
                   <div id="img3">
@@ -98,6 +99,21 @@
                   <div id="img4">
                     <a href="#">
                       <img class="image img-responsive" src="images/Viptransport-Gallery-4.jpg" alt="">
+                    </a>
+                  </div>
+                  <div id="img5">
+                    <a href="#">
+                      <img class="image img-responsive" src="images/Viptransport-Gallery-5.jpg" alt="">
+                    </a>
+                  </div>
+                  <div id="img6">
+                    <a href="#">
+                      <img class="image img-responsive" src="images/Viptransport-Gallery-6.jpg" alt="">
+                    </a>
+                  </div>
+                  <div id="img7">
+                    <a href="#">
+                      <img class="image img-responsive" src="images/Viptransport-Gallery-7.jpg" alt="">
                     </a>
                   </div>
                 </div>
@@ -119,6 +135,10 @@
                 <h4>Links</h4>
                 <p>
                   Github: <a href="https://github.com/MiroPakanec/VIPTransport-companyProject-2016">see more</a>
+                </p>
+                <p>
+                  Report: <a href="https://drive.google.com/file/d/0B3rGiP2zqMJrUU9ua296bHNjb1E/view?usp=sharing" target="_blank">open</a> or
+                  <a href="files/viptransport.pdf" download>downloads</a>
                 </p>
               </div>
             </div>
