--- a/partialViews/experience-spots.html
+++ b/partialViews/experience-spots.html
@@ -36,7 +36,7 @@
                   create meetings together as well as to see who is available and when.
                   The application helps users to find a perfect spot for their meetings - whether it is a table at the restaurant or a
                   classroom for university team meeting.
-                  The company was created as a part of my internship at UCN's next step.
+                  Spots have started as a university project and the company was later on created as a part of my internship at UCN's next step.
                 </p>
               </div>
             </div>
@@ -101,6 +101,10 @@
                 <h4>Links</h4>
                 <p>
                   Github: <a href="https://github.com/MiroPakanec/spots-companyProject-2017">see more</a>
+                </p>
+                <p>
+                  Report: <a href="https://drive.google.com/file/d/0B3rGiP2zqMJrRHVJNWtGS2VFQ00/view?usp=sharing" target="_blank">open</a> or
+                  <a href="files/spots.pdf" download>downloads</a>
                 </p>
               </div>
             </div>
