Added all modals and icons

--- a/partialViews/experience-nextstep.html
+++ b/partialViews/experience-nextstep.html
@@ -14,12 +14,12 @@
             <!--Inner Wrapper -->
             <div class="row">
               <div class="col-md-4 col-md-offset-0 col-xs-8 col-xs-offset-2">
-                <img class="image img-responsive" src="images/Paint-Title.png" alt="">
+                <img class="image img-responsive" src="images/Nextstep-Title.png" alt="">
               </div>
               <div class="col-md-8 col-md-offset-0 col-xs-12">
-                <h1 class="mg-md-top mg-md-bottom text-lg-center">Paint</h4>
-                <h5>July 2017</h5>
-                <h5>A small web application for painting created using p5.js.</h5>
+                <h1 class="mg-md-top mg-md-bottom text-lg-center">Nextstep</h4>
+                <h5>Position: Intern</h5>
+                <h5>Period: 1st February - 31st May</h5>
               </div>
             </div>
           </div>
@@ -29,61 +29,42 @@
             <!--Row1 -->
             <div class="row">
               <div class="col-xs-12 mg-sm-top">
-                <h4>Motivation</h4>
+                <h4>What is Next step?</h4>
                 <p class="indent text-justify">
-                  Paint is a simple drawing program. The user is provided with a simple, rather <b>minimalistic</b> interface,
-                  allowing him to perform simple operations, such as change brush color, size, transparency, border and shape.
-                  The user can also choose between either the brush or the rubber. In my opinion a particullarly interesting user
-                  story to implement was undo/ redo user action, where I took the advantage of <b>command pattern</b>.
-                  Finally I used <b>bootstrap</b> to adjust the project and canvas to any device width and legth.
+                  Next step is a UCN's program that is designed to help ideas and start-up businesses to flourish and grow.
+                  I have joined Next step program with my former classmate and together we worked on the project called Spots
+                  <i>(see Projects - Spots)</i>. The internship program offered methoring in various areas (marketing, finances, etc.)
+                  and different meeting and activities. During the week we would have various methoring sessions and in the end of the week
+                  every one would present the progress of the company in the fron it others. Additionally there were many pitching event
+                  in a front of the class and investors. Finally, in May, we have participated on a start up contest in Aarhus, where we pitched
+                  out idea in the fron of other companies.
                 </p>
               </div>
             </div>
 
-            <!--Row2-->
-            <div class="row">
-              <div class="col-xs-12 mg-sm-top">
-                <h4>About</h4>
-                <p class="indent text-justify">
-                  During my summer vocation I have begin to explore a javascript library called <b>p5.js</b>.
-                  It is a library for <b>visualizations</b> and <b>drawing</b>, and so naturally the first project,
-                  which I have made was indeed paint. While the project does not have a server-side language and is intirely
-                  build with <b>javascript</b>, I have puth a great deal of focus into designing it with a sense of <b>reusability</b>,
-                  <b>adaptability</b> and <b>extendability</b>. While my goal was primeraly to grasp the p5.js library,
-                  I have also attempted to create a project that is <b>neat</b> and <b>easy to understand</b>.
-                </p>
-              </div>
-            </div>
-
-            <!--Row2-->
-            <div class="row">
-              <div class="col-xs-12 mg-sm-top">
-                <h4>Technologies</h4>
-                <p class="indent text-justify">
-                  <br>
-                  ● JavaScript <br>
-                  ● jQuery <br>
-                  ● Bootstrap <br>
-                  ● p5.js <br>
-                  ● HTML <br>
-                  ● CSS
-                </p>
-              </div>
-            </div>
-
-            <!--Row4-->
+            <!--Row5-->
             <div class="row mg-sm-top">
               <div class="col-md-8 col-md-offset-2 col-xs-12 mg-sm-top regular">
                 <!--Slider-->
                 <div class="gallery">
                   <div id="img1">
                     <a href="#" class="expand-image">
-                      <img id="test" class="image img-responsive image-modal" src="images/Paint-Gallery-1.jpg" alt="">
+                      <img id="test" class="image img-responsive image-modal" src="images/Nextstep-Gallery-1.jpg" alt="">
                     </a>
                   </div>
                   <div id="img2">
                     <a href="#" class="expand-image">
-                      <img id="test" class="image img-responsive image-modal" src="images/Paint-Gallery-2.jpg" alt="">
+                      <img class="image img-responsive" src="images/Nextstep-Gallery-2.jpg" alt="">
+                    </a>
+                  </div>
+                  <div id="img2">
+                    <a href="#" class="expand-image">
+                      <img class="image img-responsive" src="images/Nextstep-Gallery-3.jpg" alt="">
+                    </a>
+                  </div>
+                  <div id="img2">
+                    <a href="#" class="expand-image">
+                      <img class="image img-responsive" src="images/Nextstep-Gallery-4.jpg" alt="">
                     </a>
                   </div>
                 </div>
@@ -104,7 +85,7 @@
               <div class="col-xs-12 mg-sm-top">
                 <h4>Links</h4>
                 <p>
-                  Github: <a href="https://github.com/MiroPakanec/paint-miniproject-2017" target="_blank">see more</a>
+                  Web: <a href="https://ucnnextstep.dk/" target="_blank">see more</a>
                 </p>
               </div>
             </div>
