--- a/partialViews/experience-spots.html
+++ b/partialViews/experience-spots.html
@@ -44,6 +44,18 @@
             <!--Row2-->
             <div class="row">
               <div class="col-xs-12 mg-sm-top">
+                <h4>Team</h4>
+                <p class="indent text-justify">
+                  Having a company gave me an unique experience of working with people. I had the priviledge to have an amazing team of people,
+                  where every one contributed differently -
+                  from FE and BE development, to project management, marketing and design.
+                </p>
+              </div>
+            </div>
+
+            <!--Row3-->
+            <div class="row">
+              <div class="col-xs-12 mg-sm-top">
                 <h4>Technologies behind spots</h4>
                 <p class="indent text-justify">
                   Spots was developed as a web application, using ASP.Net MVC and C#. When it comes to databases, we have chose different databases
@@ -54,7 +66,7 @@
               </div>
             </div>
 
-            <!--Row3-->
+            <!--Row4-->
             <div class="row">
               <div class="col-md-12 col-xs-12 mg-sm-top">
                 <h4>Technical outcome</h4>
@@ -67,7 +79,7 @@
               </div>
             </div>
 
-            <!--Row4-->
+            <!--Row5-->
             <div class="row mg-sm-top">
               <div class="col-md-8 col-md-offset-2 col-xs-12 mg-sm-top regular">
                 <!--Slider-->
@@ -100,11 +112,11 @@
               <div class="col-xs-12 mg-sm-top">
                 <h4>Links</h4>
                 <p>
-                  Github: <a href="https://github.com/MiroPakanec/spots-companyProject-2017">see more</a>
+                  Github: <a href="https://github.com/MiroPakanec/spots-companyProject-2017" target="_blank">see more</a>
                 </p>
                 <p>
                   Report: <a href="https://drive.google.com/file/d/0B3rGiP2zqMJrRHVJNWtGS2VFQ00/view?usp=sharing" target="_blank">open</a> or
-                  <a href="files/spots.pdf" download>downloads</a>
+                  <a href="files/spots.pdf" download>download</a>
                 </p>
               </div>
             </div>
