--- a/partialViews/main-contact.html
+++ b/partialViews/main-contact.html
@@ -25,8 +25,8 @@
                 <h5><b>Address[0]:</b> Jernbanegade 12A, Aalborg 9000, Denmark</h5>
                 <h5><b>Address[1]:</b> Neslusa 523, 02341 Neslusa, Slovakia</h5>
                 <hr>
-                <h5><b>Linked in: </b> <a href="linkedin.com/in/miroslavpakanec">linkedin.com/in/miroslavpakanec</a></h5>
-                <h5><b>Github: </b><a href="github.com/MiroPakanec">github.com/MiroPakanec</a></h5>
+                <h5><b>Linked in: </b> <a href="linkedin.com/in/miroslavpakanec" target="_blank">linkedin.com/in/miroslavpakanec</a></h5>
+                <h5><b>Github: </b><a href="github.com/MiroPakanec" target="_blank">github.com/MiroPakanec</a></h5>
               </div>
             </div>
           </div>
