--- a/partialViews/experience-siemense.html
+++ b/partialViews/experience-siemense.html
@@ -31,7 +31,41 @@
               <div class="col-xs-12 mg-sm-top">
                 <h4>About the Internship</h4>
                 <p class="indent text-justify">
-                  I was doing ...
+                  Being a part of Siemens was indeed a great opportunity and my best career experience so far. Joining such a
+                  corporate size company was difficult at first, considering that It was my first experience in the field
+                  outside class room and freelancing. I have joined one of the <b>SCRUM teams</b>,
+                  which worked on the <b>Central Image Processing (CIP)</b>
+                  module of application called <b>Syngo.via</b>. Since Syngo via was running on <b>.NET</b> framework, I had a change to
+                  apply skills, which I have acquared from my previous projects.
+                </p>
+              </div>
+            </div>
+
+            <!--Row1 -->
+            <div class="row">
+              <div class="col-xs-12 mg-sm-top">
+                <h4>Responsibilities and Tasks</h4>
+                <p class="indent text-justify">
+                  One of the pros of my internship was that my tasks changed based on my knowledge and experience with the application.
+                  I began with writing <b>Unit tests</b> using <b>Moq</b> library. My task was to improve test coverage, preferably of classes
+                  with higher defect occurences. I have quickly learned about the importance of <b>testable architecture</b> and design,
+                  because I was not able to properly test some part of the poorly written / legacy code.
+                </p>
+                <p class="indent text-justify">
+                  Later I started to write <b>automated tests</b>. I was focusing on this during the majority of the internship, since automated UI tests
+                  were crutial for such front-end heavy application. I was given the <b>manual test specification</b> as well as the <b>requirement specification</b>
+                  and my task was to write tests for features that have not yet been tested. The automation took advantage of the command pattern
+                  and set of test steps. The key point was to write the tests <b>fluently</b>, so that they resemble the manual test specification
+                  as much as possible. I have applied the knowledge of automation in my later projects - Spots and Georgia tech library.
+                </p>
+                <p class="indent text-justify">
+                  I was also part of <b>manual testing</b> that the whole team participated upon after every small release. The team would slip the manual
+                  test specification and collectevely test the part of the system its responsible for. If any defects were found, they were documented
+                  and later verified by the <b>product owner</b>.
+                </p>
+                <p class="indent text-justify">
+                  Finally, I was also working on improvment of the <b>automated test step library</b>. Some features to be tested required test steps that were
+                  not supported, so I was to implement them.
                 </p>
               </div>
             </div>
@@ -49,6 +83,21 @@
                   <div id="img2">
                     <a href="#" class="expand-image">
                       <img class="image img-responsive" src="images/SiemensHealthcare-Gallery-2.jpg" alt="">
+                    </a>
+                  </div>
+                  <div id="img3">
+                    <a href="#" class="expand-image">
+                      <img class="image img-responsive" src="images/SiemensHealthcare-Gallery-6.jpg" alt="">
+                    </a>
+                  </div>
+                  <div id="img4">
+                    <a href="#" class="expand-image">
+                      <img class="image img-responsive" src="images/SiemensHealthcare-Gallery-4.jpg" alt="">
+                    </a>
+                  </div>
+                  <div id="img5">
+                    <a href="#" class="expand-image">
+                      <img class="image img-responsive" src="images/SiemensHealthcare-Gallery-5.jpg" alt="">
                     </a>
                   </div>
                 </div>
@@ -69,11 +118,20 @@
               <div class="col-xs-12 mg-sm-top">
                 <h4>Links</h4>
                 <p>
-                  Github: <a href="https://github.com/MiroPakanec/VIPTransport-companyProject-2016">see more</a>
+                  SCRUM Master's feedback: <a href="https://drive.google.com/file/d/0B3rGiP2zqMJreHc3cjJtOExwdVE/view?usp=sharing" target="_blank">open</a> or
+                  <a href="files/siemens-feedback.pdf" download>download</a>
                 </p>
+                <p>
+                  Training certificates: <a href="https://drive.google.com/file/d/0B3rGiP2zqMJrSmQwVk1Hd0ZNLUE/view?usp=sharing" target="_blank">open</a> or
+                  <a href="files/siemens-training.pdf" download>download</a>
+                </p>
+                <p>
+                  My reflection: <a href="https://drive.google.com/file/d/0B3rGiP2zqMJrWERneDh5YVo1SEk/view?usp=sharing" target="_blank">open</a> or
+                  <a href="files/siemens-reflection.pdf" download>download</a>
+                </p>
+
               </div>
             </div>
-
           </div>
         </div>
       </div>
