--- a/partialViews/project-gtl.html
+++ b/partialViews/project-gtl.html
@@ -102,7 +102,7 @@
               <div class="col-xs-12 mg-sm-top">
                 <h4>Links</h4>
                 <p>
-                  Github: <a href="https://github.com/MiroPakanec/libraryCase-universityProject-2017">see more</a>
+                  Github: <a href="https://github.com/MiroPakanec/libraryCase-universityProject-2017" target="_blank">see more</a>
                 </p>
                 <p>
                   Report: <a href="https://drive.google.com/file/d/0B3rGiP2zqMJrVENFcDhXU1BLVkk/view?usp=sharing" target="_blank">open</a> or
