--- a/partialViews/project-spots.html
+++ b/partialViews/project-spots.html
@@ -14,12 +14,12 @@
             <!--Inner Wrapper -->
             <div class="row">
               <div class="col-md-4 col-md-offset-0 col-xs-8 col-xs-offset-2">
-                <img class="image img-responsive" src="images/Paint-Title.png" alt="">
+                <img class="image img-responsive" src="images/Spots-Title.jpg" alt="">
               </div>
               <div class="col-md-8 col-md-offset-0 col-xs-12">
-                <h1 class="mg-md-top mg-md-bottom text-lg-center">Paint</h4>
-                <h5>July 2017</h5>
-                <h5>A small web application for painting created using p5.js.</h5>
+                <h1 class="mg-md-top mg-md-bottom text-lg-center">Spots</h4>
+                <h5>Position: Owner</h5>
+                <h5>Period: 1st October 2016 - 31st Jun 2017</h5>
               </div>
             </div>
           </div>
@@ -29,13 +29,14 @@
             <!--Row1 -->
             <div class="row">
               <div class="col-xs-12 mg-sm-top">
-                <h4>Motivation</h4>
+                <h4>What is Spots?</h4>
                 <p class="indent text-justify">
-                  Paint is a simple drawing program. The user is provided with a simple, rather <b>minimalistic</b> interface,
-                  allowing him to perform simple operations, such as change brush color, size, transparency, border and shape.
-                  The user can also choose between either the brush or the rubber. In my opinion a particullarly interesting user
-                  story to implement was undo/ redo user action, where I took the advantage of <b>command pattern</b>.
-                  Finally I used <b>bootstrap</b> to adjust the project and canvas to any device width and legth.
+                  Spots in a nutshell is a centrilized booking system. It is designed to help users to manager their meetings, events
+                  and time overall. A large part of the system also focuses on communication - users are able to interact,
+                  create meetings together as well as to see who is available and when.
+                  The application helps users to find a perfect spot for their meetings - whether it is a table at the restaurant or a
+                  classroom for university team meeting.
+                  Spots have started as a university project and the company was later on created as a part of my internship at UCN's next step.
                 </p>
               </div>
             </div>
@@ -43,14 +44,11 @@
             <!--Row2-->
             <div class="row">
               <div class="col-xs-12 mg-sm-top">
-                <h4>About</h4>
+                <h4>Team</h4>
                 <p class="indent text-justify">
-                  During my summer vocation I have begin to explore a javascript library called <b>p5.js</b>.
-                  It is a library for <b>visualizations</b> and <b>drawing</b>, and so naturally the first project,
-                  which I have made was indeed paint. While the project does not have a server-side language and is intirely
-                  build with <b>javascript</b>, I have puth a great deal of focus into designing it with a sense of <b>reusability</b>,
-                  <b>adaptability</b> and <b>extendability</b>. While my goal was primeraly to grasp the p5.js library,
-                  I have also attempted to create a project that is <b>neat</b> and <b>easy to understand</b>.
+                  Having a company gave me an unique experience of working with people. I had the priviledge to have an amazing team of people,
+                  where every one contributed differently -
+                  from FE and BE development, to project management, marketing and design.
                 </p>
               </div>
             </div>
@@ -58,15 +56,25 @@
             <!--Row2-->
             <div class="row">
               <div class="col-xs-12 mg-sm-top">
-                <h4>Technologies</h4>
+                <h4>Technologies behind spots</h4>
                 <p class="indent text-justify">
-                  <br>
-                  ● JavaScript <br>
-                  ● jQuery <br>
-                  ● Bootstrap <br>
-                  ● p5.js <br>
-                  ● HTML <br>
-                  ● CSS
+                  Spots was developed as a web application, using ASP.Net MVC and C#. When it comes to databases, we have chose different databases
+                  for different purposes - SQL server was used for authentication and NoSQL database mongoDB was used to handle both information
+                  about the users, spots, locations and events as well as exception and activity logs.</br>
+                  On the client side, Knockout JS and MVVM pattern was used, together with bootstrap and jquery.
+                </p>
+              </div>
+            </div>
+
+            <!--Row3-->
+            <div class="row">
+              <div class="col-md-12 col-xs-12 mg-sm-top">
+                <h4>Technical outcome</h4>
+                <p class="indent text-justify">
+                  From the technological stand point, I have learned
+                  a lot about MVC architecture and I have strenghten my knowledge in C#, Object oriented programming, Design pattern and I have
+                  generally improved the quality of my code. The biggest value was that the project has much longer lifespan that other university
+                  projects I have done. This really taught me the importance of writing clean, testable code according to the SOLID principles.
                 </p>
               </div>
             </div>
@@ -78,12 +86,12 @@
                 <div class="gallery">
                   <div id="img1">
                     <a href="#" class="expand-image">
-                      <img id="test" class="image img-responsive image-modal" src="images/Paint-Gallery-1.jpg" alt="">
+                      <img id="test" class="image img-responsive image-modal" src="images/Spots-Gallery-1.png" alt="">
                     </a>
                   </div>
                   <div id="img2">
                     <a href="#" class="expand-image">
-                      <img id="test" class="image img-responsive image-modal" src="images/Paint-Gallery-2.jpg" alt="">
+                      <img class="image img-responsive" src="images/Spots-Gallery-2.png" alt="">
                     </a>
                   </div>
                 </div>
@@ -104,7 +112,11 @@
               <div class="col-xs-12 mg-sm-top">
                 <h4>Links</h4>
                 <p>
-                  Github: <a href="https://github.com/MiroPakanec/paint-miniproject-2017" target="_blank">see more</a>
+                  Github: <a href="https://github.com/MiroPakanec/spots-companyProject-2017" target="_blank">see more</a>
+                </p>
+                <p>
+                  Report: <a href="https://drive.google.com/file/d/0B3rGiP2zqMJrRHVJNWtGS2VFQ00/view?usp=sharing" target="_blank">open</a> or
+                  <a href="files/spots.pdf" download>downloads</a>
                 </p>
               </div>
             </div>
