--- a/partialViews/project-vipTransport.html
+++ b/partialViews/project-vipTransport.html
@@ -134,7 +134,7 @@
               <div class="col-xs-12 mg-sm-top">
                 <h4>Links</h4>
                 <p>
-                  Github: <a href="https://github.com/MiroPakanec/VIPTransport-companyProject-2016">see more</a>
+                  Github: <a href="https://github.com/MiroPakanec/VIPTransport-companyProject-2016" target="_blank">see more</a>
                 </p>
                 <p>
                   Report: <a href="https://drive.google.com/file/d/0B3rGiP2zqMJrUU9ua296bHNjb1E/view?usp=sharing" target="_blank">open</a> or
