--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
     <link rel="stylesheet" href="css/modalStyles.css">
   </head>
   <body>
+    <div class="container isHidden">
+      <div class="row mg-xlg-top mg-xlg-bottom">
+        <div class="col-xs-12 col-xs-offset-0">
+          <p class="text-center text-header border-bottom-dark">Miroslav Pakanec's</p>
+        </div>
+        <div class="col-xs-12 col-xs-offset-0">
+          <p class="text-center text-subheader">- portfolio -</p>
+        </div>
+      </div>
+    </div>
+
     <div id="canvas"></div>
     <div id="modal"></div>
 
@@ -26,6 +37,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.js"></script>
 
     <script language="javascript" type="text/javascript" src="js/canvas.js"></script>
+    <script language="javascript" type="text/javascript" src="js/load.js"></script>
     <script language="javascript" type="text/javascript" src="js/cursor.js"></script>
     <script language="javascript" type="text/javascript" src="js/style.js"></script>
     <script language="javascript" type="text/javascript" src="js/iconHandler.js"></script>
