--- a/partialViews/education-sd.html
+++ b/partialViews/education-sd.html
@@ -14,7 +14,7 @@
             <!--Inner Wrapper -->
             <div class="row">
               <div class="col-md-4 col-md-offset-0 col-xs-8 col-xs-offset-2">
-                <img class="image img-responsive" src="images/Cs-Title.png" alt="">
+                <img class="image img-responsive" src="images/Sd-Title.png" alt="">
               </div>
               <div class="col-md-8 col-md-offset-0 col-xs-12">
                 <h1 class="mg-md-top mg-md-bottom text-lg-center">Software development</h4>
