--- a/partialViews/main-about.html
+++ b/partialViews/main-about.html
@@ -14,7 +14,7 @@
             <!--Inner Wrapper -->
             <div class="row">
               <div class="col-md-4 col-md-offset-0 col-xs-8 col-xs-offset-2">
-                <img class="image img-responsive" src="images/main-about-title.jpg" alt="">
+                <img class="image img-responsive" src="images/Main-About-Title.jpg" alt="">
               </div>
               <div class="col-md-8 col-md-offset-0 col-xs-12">
                 <h1 class="mg-md-top mg-md-bottom text-lg-center">Miroslav Pakanec</h1>
